# spotfm

./: .gitignore  README.md  pyproject.toml  stats_cmd.py  time_top_artists.py
.gitea/workflows/: ci.yml
.github/workflows/: ci.yml
config/: uri_groups.json
spotfm/: chart.py  timer.py
spotfm/charts/: chart.py
spotfm/engine/: chart_source.py
spotfm/maths/: counter.py  stats.py
tests/: test_counter.py
