[tool.poetry]
name = "spotfm"
version = "1.0.0"
description = "Interface functions for spotframework and fmframework. Maths functions among others"
authors = ["andy <andy@sarsoo.xyz>"]
repository = "https://github.com/Sarsoo/spotfm"

[tool.poetry.dependencies]
python = "^3.8"

spotframework = { git = "https://github.com/Sarsoo/spotframework.git" }
fmframework = { git = "https://github.com/Sarsoo/pyfmframework.git" }

[tool.poetry.dev-dependencies]
pylint = "^2.5.3"
flake8 = "^3.8.4"

[tool.poetry.scripts]
test = 'scripts:test'
testv = 'scripts:testv'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
